# lightdm

./: .bzrignore  .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.md  ChangeLog  Dockerfile  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  lightdm.doap
common/: Makefile.am  configuration.c  configuration.h  dmrc.c  dmrc.h  privileges.c  privileges.h  user-list.c  user-list.h
data/: Makefile.am  dm-tool.1  guest-session.apparmor  guest-session.apparmor_abstraction  lightdm-set-defaults.1  lightdm.1  lightdm.conf  org.freedesktop.DisplayManager.AccountsService.policy.in  org.freedesktop.DisplayManager.AccountsService.xml  org.freedesktop.DisplayManager.conf  org.freedesktop.LightDisplayManager.conf.in  org.gnome.LightDisplayManager.conf  org.lightdm.LightDisplayManager.conf  org.lightdm.LightDisplayManager.conf.in  users.conf
data/apparmor/: lightdm-guest-session.in
data/bash-completion/: dm-tool  lightdm
data/init/: Makefile.am  lightdm.conf
data/pam/: lightdm  lightdm-autologin  lightdm-greeter
doc/: Makefile.am  ldmgreeter-docs.sgml  ldmgreeter-sections.txt  ldmgreeter.types  lightdm-gobject-0-sections.txt  lightdm-gobject-0.types  lightdm-gobject-1-docs.sgml  lightdm-gobject-1-sections.txt  lightdm-gobject-1.types
doc/tmpl/: greeter.sgml  language.sgml  layout.sgml  power.sgml  session.sgml  system.sgml  user.sgml
greeters/: Makefile.am  ldm-gtk-greeter.c  ldm-webkit-greeter.c  lightdm-gtk-greeter.c  lightdm-qt-greeter.h
greeters/gtk/: Makefile.am  greeter.ui  lightdm-example-gtk-greeter.c  lightdm-gtk-greeter.c  lightdm-gtk-greeter.conf  lightdm-gtk-greeter.desktop
greeters/python-gtk/: Makefile.am  lightdm-example-python-gtk-greeter
greeters/qt/: Makefile.am  greeter.cpp  greeter.h  lightdm-example-qt-greeter.cpp  lightdm-example-qt-greeter.h  lightdm-qt-greeter.cpp  lightdm-qt-greeter.desktop  loginprompt.cpp  loginprompt.h  loginprompt.ui  main.cpp  panel.cpp  panel.h  panel.ui
greeters/vala-gtk/: Makefile.am  lightdm-example-vala-gtk-greeter.vala  lightdm-vala-gtk-greeter.vala
help/: Makefile.am
help/C/: auto-login.page  autologin.page  available-greeters.page  available-sessions.page  config.page  default-greeter.page  default-session.page  diagnostics.page  guest.page  index.page  introduction.page  ldap.page  local-sessions.page  multi-seat.page  multi-session.page  nfs.page  pam.page  remote-sessions.page  seat.page  standard-authentication.page  user-list.page  user-switching.page  vnc.page  write-greeter.page  xdmcp.page
libldmgreeter/: Makefile.am  greeter.c  greeter.h  language.c  language.h  layout.c  layout.h  libldmgreeter-0.pc.in  libldmgreeter-1.pc.in  session.c  session.h  user.c  user.h
libldmgreeter-gobject/: Makefile.am  layout.c
libldmgreeter-qt/: Makefile.am  consolekitinterface.cpp  displayinterface.cpp  displayinterface.h  ldmauthrequest.cpp  ldmgreeter.cpp  ldmsession.cpp  ldmuser.h  libldmgreeter-qt-0.pc.in  powermanagementinterface.cpp  powermanagementinterface.h  usermanagerinterface.cpp  usermanagerinterface.h
liblightdm-gobject/: LightDM-1-custom.vala  LightDM-1.metadata  Makefile.am  greeter-protocol.h  greeter.c  greeter.h  language.c  language.h  layout.c  liblightdm-gobject-0.pc.in  liblightdm-gobject-0.vapi  liblightdm-gobject-1.deps  liblightdm-gobject-1.pc.in  liblightdm-gobject-1.vapi  lightdm-0.vapi  lightdm.h  power.c  session.c  system.c  user-list.c  user-private.h  user.c  user.h
liblightdm-gobject/lightdm/: Makefile.am  greeter.h  language.h  layout.h  power.h  session.h  system.h  user-list.h  user.h
liblightdm-qt/: Makefile.am  consolekitinterface.h  greeter.cpp  greeter.h  language.cpp  language.h  ldmauthrequest.h  ldmgreeter.cpp  ldmgreeter.h  ldmlanguage.cpp  ldmlanguage.h  ldmsession.h  ldmsessionsmodel.cpp  ldmsessionsmodel.h  ldmuser.cpp  ldmuser.h  liblightdm-qt-0.pc.in  liblightdm-qt-1.pc.in  liblightdm-qt-2.pc.in  liblightdm-qt-3.pc.in  liblightdm-qt5-2.pc.in  liblightdm-qt5-3.pc.in  liblightdm-qt6-3.pc.in  power.cpp  session.cpp  sessionsmodel.cpp  sessionsmodel.h  system.cpp  user.cpp  usersmodel.cpp
liblightdm-qt/QLightDM/: AuthRequest  Config  Greeter  Language  Makefile.am  Power  Session  SessionsModel  System  User  UsersModel  (+16 more)
src/: Makefile.am  accounts.c  accounts.h  child-process.c  child-process.h  ck-connector.c  ck-connector.h  configuration.c  configuration.h  console-kit.c  console-kit.h  display-manager-service.c  display-manager-service.h  display-manager.c  display-manager.h  display-manager.xml  display-server.c  display-server.h  display.c  display.c.THIS  display.h  display.xml  dm-tool.c  dmrc.c  dmrc.h  gdmflexiserver  greeter-protocol.h  greeter-session.c  greeter-session.h  greeter-socket.c  greeter-socket.h  greeter.c  greeter.h  guest-account.c  guest-account.h  guest-manager.c  guest-manager.h  ldm-marshal.list  ldm-webkit-greeter.c  ldmgreeter.c  (+124 more)
tests/: Makefile.am  autologin.conf  status.c  test-add-local-x-seat  test-additional-config  test-additional-config-priority  test-additional-system-config  test-additional-system-config-priority  test-allow-tcp  test-allow-tcp-xorg-1.16  test-allow-tcp-xorg-1.17  test-audit-autologin  test-autologin  test-autologin-crash-authenticate  test-autologin-cred-error  test-autologin-cred-expired  test-autologin-cred-unavail  test-autologin-denied  test-autologin-expired  test-autologin-gobject-guest-fail-setup-script  test-autologin-gobject-guest-timeout  test-autologin-gobject-timeout  test-autologin-guest  test-autologin-guest-fail-setup-script  test-autologin-guest-in-background  test-autologin-guest-logout  test-autologin-guest-session-config  test-autologin-guest-timeout-python  test-autologin-guest-timeout-qt4  test-autologin-guest-timeout-qt5  test-autologin-guest-timeout-qt6  test-autologin-in-background  test-autologin-invalid-greeter  test-autologin-invalid-session  test-autologin-invalid-user  test-autologin-logout  test-autologin-new-authtok  test-autologin-pam  test-autologin-pam-config  test-autologin-password  (+496 more)
utils/: Makefile.am  dm-tool.c  gdmflexiserver  lightdm-set-defaults.c
(+790 files in other folders)
