@YELP_HELP_RULES@

HELP_ID = lightdm
HELP_POT = lightdm-help.pot
HELP_FILES = autologin.page \
             config.page \
             default-greeter.page \
             default-session.page \
             diagnostics.page \
             guest.page \
             index.page \
             legal.xml \
             local-sessions.page \
             remote-sessions.page \
             seat.page \
             standard-authentication.page \
             user-list.page \
             user-switching.page \
             vnc.page \
             write-greeter.page \
             xdmcp.page

HELP_LINGUAS =

DISTCLEANFILES = \
	Makefile.in
